@@ -1,3 +1,14 @@
+2009-10-14  Aaron Faupell  <afaupell@users.sourceforge.net>
+
+	* rest.tcl: add -- to denote end of options
+                    add body types "arg" and "mime_multipart"
+                    fix typo bug in option parsing
+                    make %variable substitution occur for content-type
+                    make content-type in header config override http module
+                    fix problem with unset option
+                    dont append ? to urls unless there are parameters following
+                    add basic google docs api
+
 2009-03-23  Andreas Kupries  <andreask@activestate.com>
 
 	* rest.man: Fixed all the reported syntax errors. Quick hack,
